test/syntax-errors/duplicate-data-ctor-names/duplicate-data-ctor-names.foster
main = { () };

type case DT0 of $CtorA
              of $CtorA
              of $CtorB ;

type case DT1 of $CtorB
              of $CtorA ;
